--- a/LOGIN_FORM.html
+++ b/LOGIN_FORM.html
@@ -9,7 +9,7 @@
 <body>
     <div class="card">
         <h2 align="center">LOGIN</h2>
-        <f>
+        <form>
             
                 <input title="Enter Email" type="email" name="email" id="email" placeholder="Email">
                 <input title="Enter Passowrd" type="password" name="password" id="password" placeholder="Password">
